{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 18,
  "lineage": "ba8d6fcb-1bd2-cf18-0574-02250328d33d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-010097a5c226b53c4",
            "domain": "vpc",
            "id": "eipalloc-0776baaacd3ffa233",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0793c84a25cc42801",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-44-198-15-69.compute-1.amazonaws.com",
            "public_ip": "44.198.15.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.web_IG",
            "aws_network_interface.Web-server-nic",
            "aws_security_group.web_allow_tls",
            "aws_subnet.sub-1",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:921348272700:instance/i-007ae560ba6dee61c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007ae560ba6dee61c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0793c84a25cc42801"
              }
            ],
            "primary_network_interface_id": "eni-0793c84a25cc42801",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "44.198.15.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8de85d42a03cb34",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3f1bce85aee57d3",
            "tags": {
              "Name": "web_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0359db7882902bb77"
            ]
          },
          "dependencies": [
            "aws_network_interface.Web-server-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_IG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921348272700:internet-gateway/igw-027be75f6c207e5d6",
            "id": "igw-027be75f6c207e5d6",
            "owner_id": "921348272700",
            "tags": {
              "Name": "webIG"
            },
            "vpc_id": "vpc-00c30b056fbb6e4e4"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Web-server-nic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0793c84a25cc42801",
            "ipv6_address_count": 0,
            "mac_address": "02:62:bb:b3:b9:c7",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0359db7882902bb77"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3f1bce85aee57d3"
          },
          "dependencies": [
            "aws_security_group.web_allow_tls",
            "aws_subnet.sub-1",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921348272700:route-table/rtb-0fe12b95c51b543f1",
            "id": "rtb-0fe12b95c51b543f1",
            "owner_id": "921348272700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027be75f6c207e5d6",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027be75f6c207e5d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web_route-table"
            },
            "vpc_id": "vpc-00c30b056fbb6e4e4"
          },
          "dependencies": [
            "aws_internet_gateway.web_IG",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9f3e0bad7b09e58",
            "route_table_id": "rtb-0fe12b95c51b543f1",
            "subnet_id": "subnet-0a3f1bce85aee57d3"
          },
          "dependencies": [
            "aws_internet_gateway.web_IG",
            "aws_route_table.web_route_table",
            "aws_subnet.sub-1",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_allow_tls",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921348272700:security-group/sg-0359db7882902bb77",
            "description": "Web allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0359db7882902bb77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "921348272700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c30b056fbb6e4e4"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921348272700:subnet/subnet-0a3f1bce85aee57d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a3f1bce85aee57d3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921348272700",
            "tags": {
              "Name": "web-subnet"
            },
            "tags_all": {
              "Name": "web-subnet"
            },
            "vpc_id": "vpc-00c30b056fbb6e4e4"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921348272700:vpc/vpc-00c30b056fbb6e4e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-051b738b1f8e19aef",
            "default_route_table_id": "rtb-0243ba5694c0be055",
            "default_security_group_id": "sg-05b93d7354910a256",
            "dhcp_options_id": "dopt-03cd7df38b51a624d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00c30b056fbb6e4e4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0243ba5694c0be055",
            "owner_id": "921348272700",
            "tags": {
              "Name": "WebVPC"
            },
            "tags_all": {
              "Name": "WebVPC"
            }
          }
        }
      ]
    }
  ]
}